Adjust form description dimensions to avoid off-page overflow

--- a/style.css
+++ b/style.css
@@ -168,8 +168,8 @@ h2 {
 }
 
 .form-description {
-  width: 85%;
-  height: 33%;
+  width: 100%;
+  height: 40%;
   font-size: 18px;
   display: flex;
   align-items: flex-end;
@@ -240,7 +240,7 @@ a {
   color: rgb(63, 186, 243);
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 950px) {
   body {
     flex-flow: column;
   }
